# UserTask_Assignment_JoshTalks

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py
task/: admin.py  api.py  models.py  serializers.py  urls.py
task/migrations/: 0001_initial.py
